--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development npx nodemon backend/index.js",
     "start": "cross-env NODE_ENV=production node backen/index.js",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production webpack",
+    "server:dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
