--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development npx nodemon backend/index.js",
     "start": "cross-env NODE_ENV=production node backen/index.js",
+    "postinstall": "npm run build",
     "build": "cross-env NODE_ENV=production webpack",
     "server:dev": "webpack-dev-server"
   },
