--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development npx nodemon backend/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon backend/index.js --ignore frontend",
     "start": "cross-env NODE_ENV=production node backen/index.js",
     "postinstall": "npm run build",
     "build": "cross-env NODE_ENV=production webpack",
