--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "fs-extra": "^9.0.0",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "nodemon": "^2.0.4",
     "style-loader": "^1.2.1",
     "timeago.js": "^4.0.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
 }
